--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,19 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 없다캐라의 끄적끄적
-email: rudalson@gmail.com
+title: Sciblog
+email: airrayagroup@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  없다캐라 Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: rudalson
-github_username:  rudalson
+url: "" # the base hostname & protocol for your site
+author: AIRRAYA
+
+# Gems
+gems: [jekyll-paginate]
 
 # Build settings
 markdown: kramdown
+paginate: 5
+paginate_path: 'page:num/'
+comments: true
+excerpt_separator: <!-- more -->
